# sdfstudio

./: Dockerfile  README.md  pyproject.toml
nerfstudio/fields/: sdf_field.py
scripts/: debug.py  get_sdf.py  train_sdf.py
sdfstudio/cameras/: camera_optimizers.py  cameras.py  rays.py
sdfstudio/configs/: base_config.py  method_configs.py
sdfstudio/data/datamanagers/: base_datamanager.py  variable_res_datamanager.py
sdfstudio/data/dataparsers/: base_dataparser.py  heritage_dataparser.py  mipnerf360_dataparser.py  monosdf_dataparser.py  nerfstudio_dataparser.py  nuscenes_dataparser.py  phototourism_dataparser.py  record3d_dataparser.py  sdfstudio_dataparser.py
sdfstudio/data/datasets/: base_dataset.py
sdfstudio/data/utils/: dataloaders.py  sdfstudio_collate.py
sdfstudio/engine/: optimizers.py  trainer.py
sdfstudio/exporter/: exporter_utils.py  texture_utils.py
sdfstudio/field_components/: embedding.py  encodings.py  field_heads.py  mlp.py  spatial_distortions.py  temporal_distortions.py
sdfstudio/fields/: base_field.py  density_fields.py  instant_ngp_field.py  nerfacto_field.py  sdf_field.py  tensorf_field.py  vanilla_sdf_field.py
sdfstudio/model_components/: losses.py  ray_generators.py  ray_samplers.py  renderers.py  scene_colliders.py
sdfstudio/models/: bakedsdf.py  base_model.py  base_surface_model.py  dto.py  instant_ngp.py  mipnerf.py  nerfacto.py  neus_facto.py  semantic_nerfw.py  tensorf.py  vanilla_sdf.py
sdfstudio/pipelines/: base_pipeline.py
sdfstudio/process_data/: colmap_utils.py  hloc_utils.py  metashape_utils.py  polycam_utils.py  process_data_utils.py  record3d_utils.py
sdfstudio/scripts/: process_data.py  render.py  render_mesh.py  texture.py  train.py
sdfstudio/scripts/completions/: install.py  setup.bash
sdfstudio/scripts/datasets/: process_nerfstudio_to_sdfstudio.py
sdfstudio/scripts/github/: run_actions.py
sdfstudio/scripts/licensing/: license_headers.sh
sdfstudio/scripts/viewer/: view_dataset.py
sdfstudio/utils/: colormaps.py  images.py  writer.py
sdfstudio/viewer/server/: server.py  visualizer.py
